# Add plateaukit[all] to dependencies to enable all features AI!
[project]
name = "pyvista-plateau"
version = "0.1.0"
description = "A Python package that enables plateau functionality with PyVista for 3D visualization and mesh processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyvista>=0.43.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
